--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-Flask==3.1.1
-Flask-Session==0.8.0
-python-dotenv==1.1.0
-telethon==1.40.0
-ffmpeg-python==0.2.0
-requests==2.32.4
-python-dateutil==2.9.0.post0
-pyaes==1.6.1
-rsa==4.9
+Flask
+Flask-Session
+python-dotenv
+telethon
+ffmpeg-python
+requests
+python-dateutil
+pyaes
+rsa
+psutil
